--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -509,7 +509,7 @@
                 <div class="container-fluid">
                     <div class="row head_wrap" style=" justify-content: space-between; margin-bottom: 1vh; ">
                         <div class="uni_heading" style="">
-                            <a class="btn-back" href="../Receipt/Receipt.html">
+                            <a class="btn-back" href="../Payment/Pending Payment.html">
                                 <div class="icon-wrapper">
                                     <img class="row_icons" src="../assets/arrow_back_icon.svg">
                                 </div>
