--- a/Receipt/Receipt.html
+++ b/Receipt/Receipt.html
@@ -259,7 +259,7 @@
                                         <td>24/06/2021</td>
                                         <td class="text-right">331.58</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/93c001d6-59f1-4c20-a056-93d757049cb9"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -268,7 +268,7 @@
                                         <td>14/06/2021</td>
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/93ab4b21-6487-4026-8288-ebe1e6dd9121"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -277,7 +277,7 @@
                                         <td>11/06/2021</td>
                                         <td class="text-right">271.33</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/93a54967-3fd8-45a5-9ead-70e4fdd57044"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -286,7 +286,7 @@
                                         <td>27/04/2021</td>
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/934ad2ec-f899-48f0-8948-bb4d54957c19"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -295,7 +295,7 @@
                                         <td>06/04/2021</td>
                                         <td class="text-right">601.25</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/9320c1cc-42b3-45b5-a058-870cd1184d69"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -304,7 +304,7 @@
                                         <td>31/03/2021</td>
                                         <td class="text-right">167.17</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/9314e2fe-9d52-4738-8d39-63892e2569c9"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -313,7 +313,7 @@
                                         <td>31/03/2021</td>
                                         <td class="text-right">10.00</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/c6214d55-91c4-11eb-9727-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -322,7 +322,7 @@
                                         <td>31/03/2021</td>
                                         <td class="text-right">32.94</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/93144db7-d3e3-445d-aad5-ade0b821173e"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -331,7 +331,7 @@
                                         <td>30/03/2021</td>
                                         <td class="text-right">40.15</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/9312e50f-faf2-4d01-b45a-faed36b16a87"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -340,7 +340,7 @@
                                         <td>30/03/2021</td>
                                         <td class="text-right">20.00</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/9312e386-7a76-45a5-98da-c73e948a5356"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -349,7 +349,7 @@
                                         <td>30/03/2021</td>
                                         <td class="text-right">29.45</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/9312e386-7a76-45a5-98da-c73e948a5354"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -358,7 +358,7 @@
                                         <td>14/06/2018</td>
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4723d70-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -367,7 +367,7 @@
                                         <td>14/06/2018</td>
                                         <td class="text-right">4,576.70</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4723a61-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -376,7 +376,7 @@
                                         <td>14/06/2018</td>
                                         <td class="text-right">231.80</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d47237c0-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -385,7 +385,7 @@
                                         <td>15/05/2018</td>
                                         <td class="text-right">100.00</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d472351d-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -394,7 +394,7 @@
                                         <td>06/05/2018</td>
                                         <td class="text-right">72.50</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4722c86-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -403,7 +403,7 @@
                                         <td>06/05/2018</td>
                                         <td class="text-right">288.35</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4722919-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href=".checkout_text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -412,7 +412,7 @@
                                         <td>13/09/2017</td>
                                         <td class="text-right">2,000.00</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4722436-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href=".checkout_text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -421,7 +421,7 @@
                                         <td>12/09/2017</td>
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href="../Receipt/Receipt.html/d4721d46-9056-11eb-8960-705681b083ce"><span
+                                            <a class="btn btn-sm" href=".checkout_text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
