--- a/Receipt/Receipt Detailed.html
+++ b/Receipt/Receipt Detailed.html
@@ -362,11 +362,14 @@
         <div class="dashboard-wrapper">
             <main>
                 <div class="container-fluid">
-                    <div class="row mb-2">
-                        <div class="header_receipt" style="">
-                            <img class="back_img" src="../assets/arrow_back_icon.svg" style="">
-                            <!--             <h5>Receipt - OR0000030</h5> -->
-                            <div class="uni_heading">Receipt - OR0000030</div>
+                    <div class="row head_wrap" style="">
+                        <div class="uni_heading" style="">
+                            <a class="btn-back" href="../Receipt/Receipt.html">
+                                <div class="icon-wrapper">
+                                    <img class="row_icons" src="../assets/arrow_back_icon.svg">
+                                </div>
+                            </a>
+                            <div class="text-after-btn">Receipt - OR0000030</div>
                         </div>
                     </div>
                     <div class="card color-next" style=" background-color: #d4ebf6; ">
