--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -507,7 +507,7 @@
         <div class="dashboard-wrapper">
             <main class="py-4">
                 <div class="container-fluid">
-                    <div class="row head_wrap" style=" justify-content: space-between; margin-bottom: 1vh; ">
+                    <div class="row head_wrap" style="">
                         <div class="uni_heading" style="">
                             <a class="btn-back" href="../Payment/Pending Payment.html">
                                 <div class="icon-wrapper">
