--- a/Dashboard/Dashboard.html
+++ b/Dashboard/Dashboard.html
@@ -704,7 +704,7 @@
                             <div class="row">
                                 <div class="col-sm col-md-3">
                                     <div class="card color-skyBlue" style="">
-                                        <img class="group_img" src="../assets/Group.svg">
+                                        <img class="group_img" src="../assets/city_scape.svg">
                                     </div>
                                 </div>
                             </div>
