class name changes

--- a/Payment/Upload Pay Slip.html
+++ b/Payment/Upload Pay Slip.html
@@ -293,11 +293,11 @@
             </div>
         </div>
 
-        <div class="popup_wrapper">
-            <main class="popup_bg">
-                <div class="popup_container">
+        <div class="popup-wrapper">
+            <main class="popup-bg">
+                <div class="popup-container">
                     <div class="card color-next">
-                        <div class="card_title">
+                        <div class="card-title">
                             Upload Payment Slip
                         </div>
                         <div class="card-body">
@@ -305,11 +305,11 @@
                                 Please upload the copy of your payment slip
                             </div>
 
-                            <div class="popup_file_upload">
-                                <button type="submit" class="upload_payslip">
-                                    <div class="upload_slip_text">Choose file</div>
+                            <div class="popup-file-upload">
+                                <button type="submit" class="upload-payslip">
+                                    <div class="upload-slip-text">Choose file</div>
                                 </button>
-                                <div class="file_choose_text">
+                                <div class="file-choose-text">
                                     No file choosen
                                 </div>
                             </div>
@@ -320,9 +320,9 @@
                             </div> -->
 
                             <button type="submit" class="submit-pay">
-                                <div class="submit_button_wrap">
-                                    <div class="pay_button_text">Upload</div>
-                                    <img class="upload_icon" src="../assets/file_upload_white_icon.svg">
+                                <div class="submit-button-wrap">
+                                    <div class="pay-button-text">Upload</div>
+                                    <img class="upload-icon" src="../assets/file_upload_white_icon.svg">
                                 </div>
                             </button>
                         </div>
