--- a/Payment/Outstanding Bill.html
+++ b/Payment/Outstanding Bill.html
@@ -425,9 +425,9 @@
                             </form>
                         </div>
                     </div>
-                    <button type="submit" class="checkout_button" style=" display: flex; ">
-                        <div class="checkout_text">Check out</div>
-                        <img class="white_tick" src="../assets/tick_icon.svg">
+                    <button type="submit" class="page-Button" style=" display: flex; ">
+                        <div class="page-button-text">Check out</div>
+                        <img class="page-button-Icon" src="../assets/tick_icon.svg">
                     </button>
                 </div>
             </main>
