--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -471,7 +471,7 @@
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html"
                                 id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false"><span style="color: white;">
+                                aria-expanded="false"><span>
                                     <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown"
@@ -701,11 +701,9 @@
                         </form>
                     </div>
                     <div class="payment_pay_buttons">
-                        <button type="submit" class="pay_buttonSubmit">
-                            <div class="submit_button_wrap">
-                                <div class="pay_button_text">Pay</div>
-                                <img class="white_tick" src="../assets/tick_icon.svg">
-                            </div>
+                        <button type="submit" class="page-Button">
+                            <div class="page-button-text">Pay</div>
+                            <img class="page-button-Icon" src="../assets/tick_icon.svg">
                         </button>
                         <a href="../Payment/Upload Pay Slip.html" type="submit" class="upload_slip_btn">
                             <div class="upload_slip_text">Upload Payment Slip</div>
