--- a/Payment/Pending Payment.html
+++ b/Payment/Pending Payment.html
@@ -195,7 +195,7 @@
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html"
                                 id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false"><span style="color: white;">
+                                aria-expanded="false"><span>
                                     <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown"
