--- a/Receipt/Receipt.html
+++ b/Receipt/Receipt.html
@@ -404,7 +404,7 @@
                                         <td>06/05/2018</td>
                                         <td class="text-right">288.35</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href=".checkout_text "><span
+                                            <a class="btn btn-sm" href=".page-button-text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -413,7 +413,7 @@
                                         <td>13/09/2017</td>
                                         <td class="text-right">2,000.00</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href=".checkout_text "><span
+                                            <a class="btn btn-sm" href=".page-button-text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
@@ -422,7 +422,7 @@
                                         <td>12/09/2017</td>
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
-                                            <a class="btn btn-sm" href=".checkout_text "><span
+                                            <a class="btn btn-sm" href=".page-button-text "><span
                                                     style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
