--- a/Payment/Upload Pay Slip.html
+++ b/Payment/Upload Pay Slip.html
@@ -195,7 +195,7 @@
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html"
                                 id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false"><span style="color: white;">
+                                aria-expanded="false"><span>
                                     <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown"
@@ -321,7 +321,7 @@
 
                             <button type="submit" class="submit-pay">
                                 <div class="submit-button-wrap">
-                                    <div class="pay-button-text">Upload</div>
+                                    <div class="page-button-Text">Upload</div>
                                     <img class="upload-icon" src="../assets/file_upload_white_icon.svg">
                                 </div>
                             </button>
