--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -702,7 +702,7 @@
                     </div>
                     <div class="payment_pay_buttons">
                         <button type="submit" class="page-Button">
-                            <div class="page-button-text">Pay</div>
+                            <div class="page-button-text pay-margin">Pay</div>
                             <img class="page-button-Icon" src="../assets/tick_icon.svg">
                         </button>
                         <a href="../Payment/Upload Pay Slip.html" type="submit" class="upload_slip_btn">
