--- a/Payment/Upload Pay Slip.html
+++ b/Payment/Upload Pay Slip.html
@@ -297,7 +297,7 @@
             <main class="popup-bg">
                 <div class="popup-container">
                     <div class="card color-next">
-                        <div class="card-title">
+                        <div class="card-title popup-title">
                             Upload Payment Slip
                         </div>
                         <div class="card-body">
@@ -319,11 +319,9 @@
                                     for=fileattached>
                             </div> -->
 
-                            <button type="submit" class="submit-pay">
-                                <div class="submit-button-wrap">
-                                    <div class="page-button-Text">Upload</div>
-                                    <img class="upload-icon" src="../assets/file_upload_white_icon.svg">
-                                </div>
+                            <button type="submit" class="page-Button">
+                                <div class="page-button-Text">Upload</div>
+                                <img class="page-button-Icon" src="../assets/file_upload_white_icon.svg">
                             </button>
                         </div>
                     </div>
