--- a/Receipt/Receipt Detailed.html
+++ b/Receipt/Receipt Detailed.html
@@ -460,7 +460,7 @@
                 <button class="page-Button download-margin"
                     href="https://uatpba01.unityapps.net/property/print/receipt?suuid=93c001d6-59f1-4c20-a056-93d757049cb9&amp;download=Y"
                     formtarget="_blank" target="_blank">
-                    <div class="page-button-Text">Print</div>
+                    <div class="page-button-Text print-text-margin">Print</div>
                     <img class="page-button-Icon" src="../assets/print_white_icon.svg" />
                 </button>
                 <button class="page-Button"
