--- a/Payment/Pending Payment.html
+++ b/Payment/Pending Payment.html
@@ -206,11 +206,11 @@
                                     <span class="status"></span><span class="ml-2">OWNER</span>
                                 </div>
                                 <a class="dropdown-item" href="https://uatpba01.unityapps.net/changepassword">
-                                    <i class="fas fa-key mr-2"></i>Change Password
+                                    <img class="menu_icons" src="../assets/visibility_eye_icon.svg">Change Password
                                 </a>
                                 <a class="dropdown-item" href="https://uatpba01.unityapps.net/logout" onclick="event.preventDefault();
                                                         document.getElementById(&#39;logout-form&#39;).submit();">
-                                    <i class="fas fa-power-off mr-2"></i>Logout
+                                     <img class="menu_icons" src="../assets/logout.svg">Logout
                                 </a>
                                 <form id="logout-form" action="https://uatpba01.unityapps.net/logout" method="POST"
                                     style="display: none;">
@@ -240,7 +240,7 @@
                                 </select>
                             </div>
                             <li class="nav-item">
-                                <a class="nav-link active" href="../Dashboard/Dashboard.html">
+                                <a class="nav-link" href="../Dashboard/Dashboard.html">
                                     <img class="menu_icons" src="../assets/dashboard_icon.svg">Dashboard<span
                                         class="badge badge-success">6</span></a>
                                 </a>
@@ -259,8 +259,8 @@
                                                 <span class="badge badge-success">6</span></a>
                                             </a>
                                         </li>
-                                        <li class="nav-item active">
-                                            <a class="nav-link " href="../Payment/Pending Payment.html">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="../Payment/Pending Payment.html">
                                                 <img class="menu_icons" src="../assets/credit_score_tick.svg">Pending
                                                 Payment
                                                 <span class="badge badge-success">6</span></a>
@@ -294,6 +294,7 @@
         </div>
 
         <div class="dashboard-wrapper">
+            <img class="back-house-image" style="" src="../assets/house_back_img.svg">
             <main class="py-4">
                 <div class="container-fluid">
                     <div class="row mb-2">
