--- a/Payment/Outstanding Bill.html
+++ b/Payment/Outstanding Bill.html
@@ -410,7 +410,7 @@
                                             </th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody class="outbill-table">
                                         <tr>
                                             <td>Sales Invoice</td>
                                             <td>MAR2018014</td>
