--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -476,7 +476,8 @@
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" href="../Payment/Pending Payment.html">
-                                                <img class="menu_icons" src="../assets/credit_score_tick.svg">Pending Payment
+                                                <img class="menu_icons" src="../assets/credit_score_tick.svg">
+                                                <div>Pending Payment</div>
                                                 <span class="badge badge-success">6</span></a>
                                             </a>
                                         </li>
