--- a/Payment/Pending Payment.html
+++ b/Payment/Pending Payment.html
@@ -230,13 +230,15 @@
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
                                             <a class="nav-link " href="../Payment/Outstanding Bill.html">
-                                                <img class="menu_icons" src="../assets/bill_icon.svg">Outstanding Bill
+                                                <img class="menu_icons" src="../assets/bill_icon.svg">
+                                                <div>Outstanding Bill</div>
                                                 <span class="badge badge-success">6</span></a>
                                             </a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" href="../Payment/Pending Payment.html">
-                                                <img class="menu_icons" src="../assets/credit_score_tick.svg">Pending Payment
+                                                <img class="menu_icons" src="../assets/credit_score_tick.svg">
+                                                <div>Pending Payment</div>
                                                 <span class="badge badge-success">6</span></a>
                                             </a>
                                         </li>
