--- a/Receipt/Receipt Detailed.html
+++ b/Receipt/Receipt Detailed.html
@@ -406,7 +406,7 @@
                                     </tr>
                                 </tfoot>
                             </table>
-                            <div class="receipt_total_rm" style=" display: flex; background-color: #27dab1; width: 25vh; ">
+                            <div class="total_rm" style=" ">
                                 <h6>Total (RM)</h6>
                                 <h6>331.58</h6>
                             </div>
